praticas/ficha5/ficha5/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/user/POO2017/praticas/ficha5/ficha5
-d
/Users/user/POO2017/praticas/ficha5/ficha5/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/user/POO2017/praticas/ficha5/ficha5/Playlist.java
<---- end of javadoc command ---->
Loading source file /Users/user/POO2017/praticas/ficha5/ficha5/Playlist.java...
/Users/user/POO2017/praticas/ficha5/ficha5/Playlist.java:51: error: not a statement
        lista.forEach((Faixa f)->{f.getDur()>d;});
                                            ^
1 error
